--- a/app/globals.css
+++ b/app/globals.css
@@ -25,6 +25,13 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+.no-select {
+  user-select: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+}
+
 /* Двухкурсорный ползунок диапазона */
 .range-dual {
   -webkit-appearance: none;
